Added "as" operator